k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-app-for-stg-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer-app-for-stg-kafka
  template:
    metadata:
      labels:
        app: producer-app-for-stg-kafka
    spec:
      containers:
        - name: producer-app-for-stg-kafka
          image: producer-app-for-stg-kafka
          ports:
            - containerPort: 8080
      serviceAccountName: tenant-pod-default
      automountServiceAccountToken: true # Istio sidecar needs to communicate with k8s API
