k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer-app-for-stg-kafka
spec:
  selector:
    app: producer-app-for-stg-kafka
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
