k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: producer-app-for-stg-kafka-network-policy
spec:
  podSelector:
    matchLabels:
      app: producer-app-for-stg-kafka
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 100.78.0.0/16 # admin server
    - to:
        - ipBlock:
            cidr: 100.104.0.0/16 # brokers and KDCs
    # Object storage
    - to:
        - ipBlock:
            cidr: 100.99.126.37/32
      ports:
        - port: 443
    # Log platform
    - to:
        - ipBlock:
            cidr: 100.99.100.0/22
      ports:
        - port: 6249
    # SMTP
    - to:
        - ipBlock:
            cidr: 100.72.13.1/32
      ports:
        - port: 25
    # KDC servers
    - to:
        - ipBlock:
            cidr: 100.99.140.91/32
      ports:
        - protocol: TCP
          port: 88
    - to:
        - ipBlock:
            cidr: 100.99.140.92/32
      ports:
        - protocol: TCP
          port: 88
    # Kafka Broker in SENS
    - to:
        - ipBlock:
            cidr: 100.99.122.207/32
      ports:
        - protocol: TCP
          port: 9092
    - to:
        - ipBlock:
            cidr: 100.99.122.209/32
      ports:
        - protocol: TCP
          port: 9092
